# Bit

./: Cargo.toml  bot.py  requirements.txt
src/: main.rs
